Revise parameter explanation
Also add zip to functional tools

--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Looping\" data-toc-modified-id=\"Looping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Looping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Conditions\" data-toc-modified-id=\"Conditions-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Conditions</a></span></li></ul></li><li><span><a href=\"#Branching\" data-toc-modified-id=\"Branching-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Branching</a></span><ul class=\"toc-item\"><li><span><a href=\"#Nested-loops\" data-toc-modified-id=\"Nested-loops-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Nested loops</a></span></li></ul></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Parameters\" data-toc-modified-id=\"Parameters-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Parameters</a></span></li><li><span><a href=\"#Interactivity\" data-toc-modified-id=\"Interactivity-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interactivity</a></span></li><li><span><a href=\"#Functional-programming*\" data-toc-modified-id=\"Functional-programming*-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Functional programming*</a></span></li></ul></li><li><span><a href=\"#Style-guidelines\" data-toc-modified-id=\"Style-guidelines-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Style guidelines</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Looping\" data-toc-modified-id=\"Looping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Looping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Conditions\" data-toc-modified-id=\"Conditions-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Conditions</a></span></li></ul></li><li><span><a href=\"#Branching\" data-toc-modified-id=\"Branching-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Branching</a></span><ul class=\"toc-item\"><li><span><a href=\"#Nested-loops\" data-toc-modified-id=\"Nested-loops-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Nested loops</a></span></li></ul></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Scopes\" data-toc-modified-id=\"Scopes-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Scopes</a></span></li><li><span><a href=\"#Parameters\" data-toc-modified-id=\"Parameters-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Parameters</a></span></li><li><span><a href=\"#Interactivity\" data-toc-modified-id=\"Interactivity-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Interactivity</a></span></li><li><span><a href=\"#Functional-tools*\" data-toc-modified-id=\"Functional-tools*-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Functional tools*</a></span></li></ul></li><li><span><a href=\"#Style-guidelines\" data-toc-modified-id=\"Style-guidelines-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Style guidelines</a></span></li></ul></div>"
    ]
   },
   {
@@ -463,13 +463,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Parameters_ are defined by the names that appear in a function definition (in the previous example, that would be `a` and `b`), whereas _arguments_ are the values actually passed to a function when calling it (like 5 and 6)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "It's conventional to provide your functions with a **docstring**, especially if you are going to make your work public. \n",
     "\n",
     "The first line should be a sentence offering a short description, written as a command. Other standards for one-liners and multi-line docstrings are available here:\n",
@@ -530,7 +523,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's important to distinguish between local and global variables. Variable assignments inside a function (i.e. locally) **do not override global variables**; they exist only inside the function. However, functions can access global variables!"
+    "### Scopes\n",
+    "\n",
+    "It's important to distinguish between _local_ and _global_ variables. Variable assignments inside a function (i.e. in a local scope) **do not override global variables**; they exist only inside the function. However, functions can access global variables! "
    ]
   },
   {
@@ -539,13 +534,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 4\n",
-    "b = 5\n",
+    "# define a and b globally\n",
+    "a = 1\n",
+    "b = 2\n",
     "\n",
     "def my_function():\n",
-    "    a = 400\n",
-    "    baz = 800\n",
-    "    return a, b\n",
+    "    # redefine a locally\n",
+    "    a = 100\n",
+    "    baz = 19\n",
+    "    return a, b, baz\n",
     "\n",
     "print(a, b)\n",
     "print(my_function())\n",
@@ -558,14 +555,70 @@
    "source": [
     "### Parameters\n",
     "\n",
+    "Revisit the `multiplier(a, b)` example above. There is a [distinction between parameters and arguments](https://docs.python.org/3/faq/programming.html#what-is-the-difference-between-arguments-and-parameters) in functions. _Parameters_ are the names that appear in a function definition (in this example, that would be `a` and `b`), whereas _arguments_ are the values that are actually passed to a function when calling it (like 5 and 6).\n",
     "\n",
-    "There are 5 types of [parameters](https://docs.python.org/3/glossary.html#term-parameter) that a function can accept. For example, this enables you to specify default values of your variables, such that if the user doesn't specify them an expected output is still delivered. The following function has 3 required inputs, with both of the keyword arguments set to a default value."
+    "There are two kinds of [argument](https://docs.python.org/3/glossary.html#term-argument):\n",
+    "- keyword argument: an argument preceded by an identifier (e.g. `name=`)\n",
+    "- positional argument: an argument that is not a keyword argument. Positional arguments can appear at the beginning of an argument list and/or be passed as elements of an iterable preceded by \\*.\n",
+    "\n",
+    "Here, 3 and 5 are both keyword arguments in the following call to `multipler()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiplier(a=3, b=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In the next example 3 is passed as a positional argument and 5 is a keyword argument. **Keyword arguments always follow after positional arguments.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier(3, b=5))\n",
+    "# print(multiplier(a=3, 5)) # SyntaxError"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 5 types of parameters that a function can accept. (The following is [copied directly from the docs](https://docs.python.org/3/glossary.html#term-parameter)):\n",
+    "\n",
+    "1. positional-or-keyword: specifies an argument that can be passed either positionally or as a keyword argument. This is the **default** kind of parameter, for example `foo` and `bar` in the following:\n",
+    "- `def func(foo, bar=None): ...`\n",
+    "\n",
+    "2. positional-only: specifies an argument that can be supplied only by position. Positional-only parameters can be defined by including a `/` character in the parameter list of the function definition after them, for example `posonly1` and `posonly2` in the following:\n",
+    "- `def func(posonly1, posonly2, /, positional_or_keyword): ...`\n",
+    "\n",
+    "3. keyword-only: specifies an argument that can be supplied only by keyword. Keyword-only parameters can be defined by including a single var-positional parameter or bare `*` in the parameter list of the function definition before them, for example `kw_only1` and `kw_only2` in the following:\n",
+    "- `def func(arg, *, kw_only1, kw_only2): ...`\n",
+    "\n",
+    "4. var-positional: specifies that an arbitrary sequence of positional arguments can be provided (in addition to any positional arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `*`, for example `args` in the following:\n",
+    "- `def func(*args, **kwargs): ...`\n",
+    "\n",
+    "5. var-keyword: specifies that arbitrarily many keyword arguments can be provided (in addition to any keyword arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `**`, for example `kwargs` in the example above.\n",
+    "\n",
+    "Parameters can specify both **optional** and **required** arguments, as well as *default values* for some optional arguments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This next example uses the positional-or-keyword parameters. Default values for `m` and `c` are defined, but they can be overriden."
+   ]
   },
   {
    "cell_type": "code",
@@ -577,7 +630,27 @@
     "    y = m*x + c\n",
     "    return y\n",
     "\n",
-    "straight_line(5, c=-3, m=2)"
+    "print(straight_line(5)) # the default values are used\n",
+    "print(straight_line(5, 2, 3))\n",
+    "print(straight_line(5, 2)) # this is assumed to be m\n",
+    "print(straight_line(x=5, m=2, c=-3))\n",
+    "print(straight_line(5, c=-3, m=2)) # note that you can swap the order of the keyword arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now the parameter before the / is a positional-only parameter\n",
+    "def straight_line2(x, /, m=1, c=0):\n",
+    "    y = m*x + c\n",
+    "    return y\n",
+    "\n",
+    "print(straight_line2(5))\n",
+    "print(straight_line2(5, 2, c=3))\n",
+    "# print(straight_line2(x=5, m=2)) # won't work"
    ]
   },
   {
@@ -593,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def straight_line2(q):\n",
+    "def straight_line3(q):\n",
     "    \"\"\"Calculate the ordinate for a straight line.\n",
     "    \n",
     "    Three parameters must be given in a list in this order:\n",
@@ -605,23 +678,15 @@
     "    y = m*x + c\n",
     "    return y\n",
     "\n",
-    "straight_line2([5, 1, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "straight_line2((5, 1, 1))"
+    "print(straight_line3([5, 1, 1]))\n",
+    "print(straight_line3((5, 1, 1)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, you can also write a function with only keyword arguments. Consider this function that calculates whichever unspecified variable (degree of freedom) in the ideal gas law is needed, assuming consistent units. What happens when you have too many/few arguments? What happens when you don't use the keywords or change their ordering?\n",
+    "Consider this function that calculates whichever unspecified variable (degree of freedom) in the ideal gas law is needed, assuming consistent units. What happens when you have too many/few arguments? What happens when you don't use the keywords or change their ordering?\n",
     "\n",
     "$$ PV = nRT $$"
    ]
@@ -677,16 +742,14 @@
    "source": [
     "# ideal_gas_law(T=273, P=101)\n",
     "# ideal_gas_law(T=273, n=1, P=101, V=22.5)\n",
-    "# ideal_gas_law(273, 1, 101)"
+    "# ideal_gas_law(1, 101, 273)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to allow an **_unknown_ number of arguments** to a function, use the magic variables `*args` ('positional arguments') and `**kwargs` ('keyword arguments'). The difference between the two is that `*args` is a **tuple of positional arguments** (i.e. in position after the required arguments), whereas `**kwargs` is a **dictionary of keyword arguments** (written after the required keywords). Note you could have also written `*var` and `**vars`, but the convention improves understanding. \n",
-    "\n",
-    "<span style=\"color:red\"> **Warning:** </span> Keyword arguments always follow _after positional arguments_ (whether they are of a known or unknown number)."
+    "If you want to allow an _unknown_ number of arguments to a function, use the magic variables `*args` ('positional arguments') and `**kwargs` ('keyword arguments'). The difference between the two is that `*args` is a **tuple of positional arguments** (i.e. in position after the required arguments), whereas `**kwargs` is a **dictionary of keyword arguments** (written after the required keywords). Note you could have also written `*var` and `**vars`, but the convention improves understanding. "
    ]
   },
   {
@@ -703,14 +766,14 @@
     "    \n",
     "    # *args means that any number of variables after the required inputs will be accepted too\n",
     "    if args: # If args is not empty.\n",
-    "        print(args)\n",
+    "        print(args) # tuple\n",
     "    \n",
     "    # The keyword 'kw' has a default value, but can also be set by the user.\n",
-    "    print(kw)\n",
+    "    print('kw: ', kw)\n",
     "    \n",
     "    # *kwargs means that any number of variables after the required keyword inputs will be accepted too\n",
     "    if kwargs: # If kwargs is not empty.\n",
-    "        print(kwargs)"
+    "        print(kwargs) # dictionary"
    ]
   },
   {
@@ -728,6 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a, b = 1, 2\n",
     "func(a, b)"
    ]
   },
@@ -737,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "func(1, 2, 3, 4, kw=5)"
+    "func(1, 2, 3, 4, 5, kw=6)"
    ]
   },
   {
@@ -783,9 +847,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functional programming*\n",
+    "### Functional tools*\n",
     "\n",
-    "\\*This last section is for advanced programmers. You may skip it for now.\n",
+    "\\***This section is for advanced programmers. You may skip it for now.**\n",
     "\n",
     "Instead of writing long functions, these tools enable you to write code that executes faster and is shorter (thus reduces the number of errors per line)."
    ]
@@ -794,7 +858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Python, the `lambda` keyword can create an anonymous function. This is useful if we need to define a function that is only used once, or if we want to create a function but don't need a name for it. It follows this syntax:\n",
+    "In Python, the `lambda` keyword can create an anonymous function. This can be used if you need to define a function that is only used once, or if you want to create a function but don't need a name for it. My recommendation is to use `lambda` with caution. It is never _necessary_ to use lambda. It follows this syntax:\n",
     "\n",
     "> `**lambda** arguments: expression`\n",
     "\n",
@@ -808,7 +872,7 @@
    "outputs": [],
    "source": [
     "radius = lambda x, y: (x**2 + y**2)**0.5\n",
-    "radius(2,2)"
+    "radius(3,4)"
    ]
   },
   {
@@ -817,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(lambda x, y: (x**2 + y**2)**0.5)(2,2)"
+    "(lambda x, y: (x**2 + y**2)**0.5)(3,4)"
    ]
   },
   {
@@ -870,8 +934,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List comprehensions provide a concise way to create and modify lists without resorting to use of `map()`, `ﬁlter()` nor `lambda`. Each list comprehension consists of an expression followed by a for clause, then zero or more for or if clauses. \n",
-    "> `[expression **for** i **in** list]`"
+    "List comprehensions provide a concise way to create and modify lists without resorting to use of `map()`, `filter()` nor `lambda`. Each list comprehension consists of an expression followed by a for clause, then zero or more for or if clauses. \n",
+    "> `[expression for i in list]`"
    ]
   },
   {
@@ -891,6 +955,24 @@
    "outputs": [],
    "source": [
     "[[x, x**2] for x in vec if x < 8] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `zip` [function](https://docs.python.org/3/library/functions.html#zip) returns an iterator which groups its inputs into tuples, suitable for expansion in a for loop. The iterator stops when the shortest input iterable is exhausted. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "y = [4, 5, 6]\n",
+    "list(zip(x, y))"
    ]
   },
   {
