Update Tut 1 and 2 with more guidance

--- a/Tutorial exercises/Tut 1 - Basic syntax.ipynb
+++ b/Tutorial exercises/Tut 1 - Basic syntax.ipynb
@@ -51,18 +51,26 @@
    "source": [
     "## Slicing and indexing\n",
     "\n",
-    "a) Create and change a list of integers step-by-step as shown below.\n",
-    " + [0, 3, ..., 27, 30]\n",
-    " + [0, 3, ..., 27, 30, 44, 55]\n",
-    " + [27, 30, 44, 55, 0, 3, 6, 9]\n",
-    " + [27, 30, 44, 55, 0, 3, 9]\n",
-    " + [27, 30, 44, 55, 0, 3, 9, 27, 30, 44, 55, 0, 3, 9]\n",
-    " + [0, 0, 3, 3, 9, 9, 27, 27, 30, 30, 44, 44, 55, 55]\n",
-    " \n",
-    "Hint: You may use slicing, as well as built-in functions (like `range` and `list`) and list attributes (like `append`, `pop` and `sort`). \n",
+    "Create and change a list of integers step-by-step as shown below. \n",
     "\n",
-    "b) While testing your code, you may see that the output of the previous cells keep changing when you rerun them. After your first successful run, rewrite your code so that this does not happen."
+    "While testing your code, you may see that the output of the previous cells keep changing when you rerun them. After your first successful run, rewrite your code so that this does not happen. Hint: this can be done by using the list attribute `.copy()` or by simply combining all the statements into one cell. \n",
+    "\n",
+    "\n",
+    "- `x1 = [0, 3, ..., 27, 30]` (Create a `range` of numbers from 0 to 30 in steps of 3 and display it as a `list`).\n",
+    "- `x2 = [0, 3, ..., 27, 30, 44, 55]` (Use the `.append()` attribute twice to add `44` and `55`).\n",
+    "- `x3 = [27, 30, 44, 55, 0, 3, 6, 9]` (Slice the last four and the first four numbers then concatenate them).\n",
+    "- `x4 = [27, 30, 44, 55, 0, 3, 9]` (Use the `.pop()` attribute to remove `6`).\n",
+    "- `x5 = [27, 30, 44, 55, 0, 3, 9, 27, 30, 44, 55, 0, 3, 9]` (Duplicate the list).\n",
+    "- `x6 = [0, 0, 3, 3, 9, 9, 27, 27, 30, 30, 44, 44, 55, 55]` (Sort the list in ascending numerical order)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52bb0aea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
