--- a/Tutorial exercises/Tut 2 - Iteration.ipynb
+++ b/Tutorial exercises/Tut 2 - Iteration.ipynb
@@ -5,7 +5,9 @@
    "id": "b504f995",
    "metadata": {},
    "source": [
-    "# Exercises"
+    "# Exercises\n",
+    "\n",
+    "It is good style to import any modules you may need at the top of the notebook."
    ]
   },
   {
@@ -19,6 +21,32 @@
     "$ F = P(1+i)^n$\n",
     "\n",
     "Suppose that R 100 000 ($P$) is invested at an interest rate of 5 % ($i$) over 8 years ($n$). For every year, print the year and the accumulated interest accrued on the initial investment. Round to the nearest cent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fed2fdf5",
+   "metadata": {},
+   "source": [
+    "## Ideal gas (list)\n",
+    "\n",
+    "a) There is 1 mol of an ideal gas in a piston (expandable container) at 101.3 kPa. Calculate a list of volume values (in L) as the temperature increases from 25 to 100 °C in steps of 1 °C. Round each volume to 2 decimal places. R is 8.314 $\\frac{kJ}{kmol K}$ or $\\frac{kPa L}{mol K}$. Remember 0 °C = 273 K.\n",
+    "\n",
+    "Answer: [24.46, 24.54, ..., 30.53, 30.61] L\n",
+    "\n",
+    "**Note:** It is not preferred to keep appending values to a list for calculations like this. In the next Unit, you'll redo this question by using an array.\n",
+    "\n",
+    "b) Write a function `ideal_gas_volume` that accepts $n$, $P$, and a sequence of temperatures as parameters then returns a sequence of corresponding volume values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce09e6ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = 8.314 #kJ/kmol.K or kPa.L/mol.K"
    ]
   },
   {
@@ -52,7 +80,7 @@
     "\n",
     "According to Perry _et al_ (2008: 2-170), the heat capacities of inorganic or organic liquids can be computed by the following polynomial, with $ C_{pL} $ in J/(kmol K) and $T$ in K:\n",
     "\n",
-    "$$ C_{pL} = C1 + C2T + C3T^2 + C4T^3 + C5T^4 $$\n",
+    "$$ C_{pL} = C_1 + C_2T + C_3T^2 + C_4T^3 + C_5T^4 $$\n",
     "\n",
     "There are between 1 and 5 constants tabulated in the handbook for each of the 345 different compounds, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in KJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given temperature is out of the acceptable range. \n",
     "\n",
@@ -60,7 +88,9 @@
     " - Change the given lists below (e.g. by adding zeros); use them as the input\n",
     " - Truncate the polynomial\n",
     " \n",
-    "Answer: For water at 400 K, $C_{pL}$ = 76.78 kJ/(kmol K)"
+    "Answer: \n",
+    "- For water at 400 K, $C_{pL}$ = 76.78 kJ/(kmol K)\n",
+    "- For toluene at 400 K, $C_{pL}$ = 190.42 kJ/(kmol K)"
    ]
   },
   {
@@ -68,10 +98,10 @@
    "id": "4d5ff335",
    "metadata": {},
    "source": [
-    "|    Species    |    C1        |    C2         |    C3       |    C4           |    C5           |    Tmin (K)    |Tmax (K)  |\n",
-    "|---------------|--------------|---------------|-------------|-----------------|-----------------|----------------|----------|\n",
-    "|    Tolune     |    140140    |    -152.3     |    0.695    |    -            |    -            |    178.18      |500       |\n",
-    "|    Water      |    276370    |    -2090.1    |    8.125    |    -0.014116    |    9.3701E-6    |    273.16      |533.15    |"
+    "|    Species   |   $C_1$    |   $C_2$     |   $C_3$   |   $C_4$    |   $C_5$  |  Tmin (K) | Tmax (K)|\n",
+    "|--------------|------------|-------------|-----------|------------|----------|-----------|---------|\n",
+    "|    Toluene   |    140140  |    -152.3   |    0.695  |    -       |    -     |   178.18  | 500     |\n",
+    "|    Water     |    276370  |    -2090.1  |    8.125  |  -0.014116 |9.3701E-6 |    273.16 |533.15   |"
    ]
   },
   {
