Add extra example. Rewrite some explanations
Name the modulo operator. Show how one can replace values in a list with values from another sequence. Use triple double quotes for docstrings. Use Python formatting in functional tools Markdown

--- a/Unit 1 - Basic syntax.ipynb
+++ b/Unit 1 - Basic syntax.ipynb
@@ -104,12 +104,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The % symbol in Python is called the modulo operator. It returns the remainder of a division."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "17%3 # If you want the remainder of a division"
+    "17%3 "
    ]
   },
   {
