--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -77,11 +77,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = \"Hello, world!\"\n",
-    "B = (2, 4, 6, 8)\n",
+    "words = ('cool', 'wow', 'great')\n",
     "\n",
-    "lys = []\n",
-    "for i in A:         # try B\n",
+    "for index, item in enumerate(words):\n",
+    "    print(index, item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = \"Cool\"\n",
+    "\n",
+    "lys = [] # create an empty list\n",
+    "for i in A:\n",
     "    lys.append(i)\n",
     "print(lys)"
    ]
@@ -92,23 +103,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C = {1:1, 3:9, 5:25, 4:16, 2:4}\n",
-    "print(sorted(C.items()))\n",
+    "A = \"Cool\"\n",
+    "B = [2, 4, 6, 8, 10]\n",
     "\n",
-    "for key, val in sorted(C.items()):\n",
-    "    print('Key: {} has value: {}'.format(key, val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "words = ('cool', 'wow', 'great')\n",
-    "\n",
-    "for index, item in enumerate(words):\n",
-    "    print(index, item)"
+    "for i, x in enumerate(A): # replaces the values in B with the values from A\n",
+    "    B[i] = x\n",
+    "print(B)"
    ]
   },
   {
@@ -463,9 +463,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's conventional to provide your functions with a **docstring**, especially if you are going to make your work public. \n",
+    "It's conventional to provide your functions with a **docstring**, especially if you are going to make your work public. For consistency, always use `\"\"\"triple double quotes\"\"\"` around docstrings.\n",
     "\n",
-    "The first line should be a sentence offering a short description, written as a command. Other standards for one-liners and multi-line docstrings are available here:\n",
+    "The first line should be a sentence offering a short description, written as a command (i.e. in the imperative mood). Other standards for one-liners and multi-line docstrings are available here:\n",
     "\n",
     "-  [Docstrings for Beginners](https://www.pythonforbeginners.com/basics/python-docstrings)\n",
     "-  [Docstring Conventions](https://www.python.org/dev/peps/pep-0257/)"
@@ -860,7 +860,9 @@
    "source": [
     "In Python, the `lambda` keyword can create an anonymous function. This can be used if you need to define a function that is only used once, or if you want to create a function but don't need a name for it. My recommendation is to use `lambda` with caution. It is never _necessary_ to use lambda. It follows this syntax:\n",
     "\n",
-    "> `**lambda** arguments: expression`\n",
+    "```Python\n",
+    "lambda arguments: expression\n",
+    "```\n",
     "\n",
     "Consider that the radius of a point on the Cartesian plane is given by: $r = \\sqrt{x^2 + y^2} $"
    ]
@@ -889,7 +891,9 @@
    "metadata": {},
    "source": [
     "The `map()` function applies a function `f` to all elements in a sequence `s`. \n",
-    "> `new_list = map(f, s)`"
+    "```Python \n",
+    "new_list = map(f, s)\n",
+    "```"
    ]
   },
   {
@@ -935,7 +939,9 @@
    "metadata": {},
    "source": [
     "List comprehensions provide a concise way to create and modify lists without resorting to use of `map()`, `filter()` nor `lambda`. Each list comprehension consists of an expression followed by a for clause, then zero or more for or if clauses. \n",
-    "> `[expression for i in list]`"
+    "```Python\n",
+    "[expression for i in list]\n",
+    "```"
    ]
   },
   {
@@ -996,13 +1002,6 @@
    "source": [
     "# import this"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
